deployment/overlays/dev/patches/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: core-api
spec:
  template:
    spec:
      containers:
        - name: core-api
        - name: cloud-sql-proxy
          args:
            - "--private-ip"
            - "--auto-iam-authn"
            - "--structured-logs"
            - "--port=5432"
            - "pas-development-1:europe-west4:pas-vectordb-instance"
